tests/sum17.txt
-- Tutorial step 17 (don't report spaces or digits)
sum = gap expression end
expression = term (plus term @2add / minus term @2subtract)*
term = atom (times atom @2multiply / over atom @2divide)*
atom = number / open expression close
number = #integer digit+ @number gap
plus = #operator '+' gap
minus = #operator '-' gap
times = #operator '*' gap
over = #operator '/' gap
open = #bracket '(' gap
close = #bracket ')' gap
digit = '0..9'
gap = (' ')* @
end = #newline '\13'? '\10' @
==========
2
..........
number 2
==========
42
..........
number 42
==========
2+40
..........
number 2
number 40
add
==========
2+40%
..........
Error in tests/sum17.txt, line 31: expecting newline, operator
2+40%
    ^
==========
2+10+12+18
..........
number 2
number 10
add
number 12
add
number 18
add
==========
2-10+53-3
..........
number 2
number 10
subtract
number 53
add
number 3
subtract
==========
2+
..........
Error in tests/sum17.txt, line 57: expecting bracket, integer
2+
  ^
==========
5*8+12/6
..........
number 5
number 8
multiply
number 12
number 6
divide
add
==========
2*(20+1)
..........
number 2
number 20
number 1
add
multiply
==========
 2 * ( 20 + 1 )
..........
number 2
number 20
number 1
add
multiply
